--- a/Front/frontMusic/src/components/Cards/CardForYou/CardForYou.css
+++ b/Front/frontMusic/src/components/Cards/CardForYou/CardForYou.css
@@ -29,7 +29,7 @@
 
 .image-singer .image img {
     border-radius: 5px;
-    cursor: pointer;
+    pointer-events: none;
     transition: 400ms;
     object-fit: cover;
     object-position: center;
@@ -65,7 +65,6 @@
     z-index: 1;
     display: grid;
     place-items: center;
-    cursor: pointer;
 }
 
 .play-button button {
