--- a/Front/frontMusic/src/components/Content/Login/Login.css
+++ b/Front/frontMusic/src/components/Content/Login/Login.css
@@ -1,7 +1,3 @@
-.modal-content {
-    z-index: 28;
-}
-
 @keyframes opacity {
     from {
         opacity: 0;
@@ -10,24 +6,14 @@
     }
 }
 
-.opacity-login {
+.body-login {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 100vw;
-    height: 100vh;
     animation: opacity 400ms normal;
 }
 
-@keyframes flip {
-    from {
-        transform: rotateY(65deg)
-    } to {
-        transform: rotateY(0)
-    }
-}
-
-.opacity-body section {
+.body-login section {
     background-position: center top;
     background-image: url('../../../assets/background-login.jpeg');
     min-width: 540px;
@@ -38,7 +24,6 @@
     justify-content: center;
     align-items: center;
     border-radius: 15px;
-    animation: flip 500ms linear;
 }
 
 .text-click {
