--- a/Front/frontMusic/src/components/Modals/Profile/Profile.css
+++ b/Front/frontMusic/src/components/Modals/Profile/Profile.css
@@ -1,17 +1,19 @@
 .modal-profile {
     display: flex;
     justify-content: end;
-    align-items: center;
+    align-items: start;
+    padding-top: 56px;
 }
 
 .opacity-profile {
     padding-right: 15px;
+    z-index: 8;
 }
 
 @keyframes animation-top {
     from {
         opacity: 0;
-        transform: translate3d(0,-100px,0);
+        transform: translate3d(0,-60px,0);
     } to {
         opacity: 1;
         transform: translate3d(0,0,0);
@@ -20,7 +22,7 @@
 
 .opacity-profile section {
     background-color: #23232d;
-    height: calc(100vh - 56px - 80px - 40px);
+    max-height: calc(100vh - 56px - 80px - 40px);
     width: 360px;
     overflow-x: hidden;
     overflow-y: scroll;
