--- a/Front/frontMusic/src/pages/Account/Account.module.css
+++ b/Front/frontMusic/src/pages/Account/Account.module.css
@@ -1,4 +1,13 @@
-.body-login {
+* {
+    font-family: sans-serif;
+}
+
+a:-webkit-any-link {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.bodyAccount {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,7 +15,7 @@
     background-color: #121216;
 }
 
-.top-login {
+.topAccount {
     width: 100%;
     display: flex;
     justify-content: center;
@@ -15,7 +24,7 @@
     margin-bottom: 50px;
 }
 
-#backgroundLogin {
+#backgroundAccount {
     width: 120vw;
     height: 100vh;
     border-radius: 100%;
@@ -26,7 +35,7 @@
     position: absolute;
 }
 
-.top-login section {
+.topAccount section {
     z-index: 1;
     max-width: 383px;
     min-height: 580px;
@@ -38,69 +47,90 @@
     border-radius: 15px;
 }
 
-.top-login section img {
+.topAccount section img {
     height: 20px;
     width: 100px;
     margin-bottom: 70px;
 }
 
-.text-click {
+.topAccount section h1 {
+    font-size: 2.5rem;
+    font-weight: bold;
+    color: #fff;
+    text-align: center;
+}
+
+.offer {
+    width: 100%;
+    border: 2px solid #a2a2ad91;
+    border-radius: 15px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100%;
+    box-sizing: border-box;
+    padding: 20px;
+    cursor: pointer;
     margin-bottom: 35px;
+}
+
+.offer span {
+    font-size: 14px;
+    color: #fff;
+    letter-spacing: .5px;
+    margin-bottom: 10px;
+}
+
+.offer .partnerships {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 80%;
+}
+
+.offer .partnerships img {
+    height: 30px;
+    width: 60px;
+    margin-bottom: 10px;
+    object-fit: contain;
+    mix-blend-mode: color-burn;
+}
+
+.topAccount section h2 {
+    margin-bottom: 35px;
+    font-size: 15px;
+    font-weight: 100;
+    overflow-wrap: break-word;
+    color: #fff;
     text-align: center;
 }
 
-.text-click h1 {
-    color: #fff;
-    font-size: 30px;
-    font-weight: 700;
-}
-
-.text-click span,
-.form label {
-    color: #ffffff;
-    font-size: 14px;
-    font-weight: 500;
-    margin-bottom: 5px;
-    overflow-wrap: break-word;
-}
-
-.text-click span a:-webkit-any-link {
-    color: #fff;
-    text-decoration: none;
-}
-
-.text-click strong {
+.topAccount section h2 strong {
     color: #ef5466;
     cursor: pointer;
     transition: 400ms;
-    font-size: 14px;
 }
 
-.text-click strong:hover {
+.topAccount section h2 strong:hover {
     color: #9b2e3b;
 }
 
-.social-media {
+.socialMediaAccount {
     width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
 }
 
-.social-media button {
+.socialMediaAccount button {
     border-radius: 30px;
     background-color: #fff;
     color: #191919;
     border: none;
-    font-size: 13px;
+    font-size: 15px;
     font-weight: bolder;
     box-shadow: 0 1px 20px 0 rgb(31 31 31/35%);
     min-height: 42px;
-    width: 30%;
+    width: 48%;
     display: flex;
     justify-content: space-evenly;
     align-items: center;
@@ -109,7 +139,12 @@
     transition: 400ms;
 }
 
-.social-media button:hover {
+.threeLogos button {
+    width: 30%;
+    font-size: 12px;
+}
+
+.socialMediaAccount button:hover {
     background-color: #e0e0e0;
 }
 
@@ -132,6 +167,14 @@
     font-weight: bolder;
     outline: none;
     margin-bottom: 25px;
+}
+
+.form label {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 5px;
+    overflow-wrap: break-word;
 }
 
 .form button {
@@ -165,4 +208,61 @@
 
 #forget:hover {
     color: #ef5466;
+}
+
+/* Estilização do form ScreenLogin.css */
+
+#identity-register { /* Estilizar depois */
+    width: 100%;
+    height: 54px;
+}
+
+#reCAPTCHA {
+    text-align: center;
+    font-size: 14px;
+    color: #fff;
+}
+
+.topAccount section span strong {
+    color: #ef5466;
+    transition: 400ms;
+}
+
+.topAccount section span strong:hover {
+    color: #9b2e3b;
+}
+
+.textClick {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-bottom: 35px;
+    text-align: center;
+}
+
+.textClick h1 {
+    color: #fff;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.textClick span {
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+    margin-bottom: 5px;
+    overflow-wrap: break-word;
+}
+
+.textClick strong {
+    color: #ef5466;
+    cursor: pointer;
+    transition: 400ms;
+    font-size: 14px;
+}
+
+.textClick strong:hover {
+    color: #9b2e3b;
 }
