--- a/Front/frontMusic/src/components/List/List.module.css
+++ b/Front/frontMusic/src/components/List/List.module.css
@@ -1,18 +1,18 @@
-.infos-list span {
+.infosList span {
     color: #fff;
     font-size: 16px;
     font-weight: 700;
     margin-left: 38px;
 }
 
-.infos-list ul {
+.infosList ul {
     width: 200px;
     display: flex;
     flex-direction: column;
     align-items: start;
 }
 
-.infos-list ul li{
+.infosList ul li{
     margin-bottom: 30px;
     display: list-item;
     list-style-type: none;
@@ -22,6 +22,6 @@
     transition: 400ms;
 }
 
-.infos-list ul li:hover {
+.infosList ul li:hover {
     color: #fff;
 }
