--- a/Front/frontMusic/src/components/Cards/CardCube/CardCube.module.css
+++ b/Front/frontMusic/src/components/Cards/CardCube/CardCube.module.css
@@ -1,4 +1,4 @@
-.image-cube {
+.imageCube {
     width: 264px;
     display: flex;
     flex-direction: column;
@@ -7,15 +7,16 @@
     position: relative;
 }
 
-.image-end {
+.imageEnd {
     height: 264px;
     position: relative;
     display: flex;
     justify-content: flex-start;
     align-items: end;
+    cursor: pointer;
 }
 
-.image-end img {
+.imageEnd img {
     height: 264px;
     width: 264px;
     border-radius: 5px;
@@ -23,11 +24,11 @@
     transition: 400ms;
 }
 
-.image-end img:hover{
+.imageEnd img:hover{
     opacity: 0.6;
 }
 
-.play-button-cube{
+.playButtonCube{
     position: relative;
     z-index: 2;
     width: 150px;
@@ -39,7 +40,7 @@
     gap: 10px;
 }
 
-.play-button-cube button {
+.playButtonCube button {
     justify-content: center;
     align-items: center;
     width: 40px;
@@ -48,11 +49,11 @@
     border: none;
     background-color: #fff;
     color: #000;
-    cursor: pointer;
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    cursor: pointer;
 }
 
-.play-button-cube button svg {
+.playButtonCube button svg {
     width: 18px;
     height: 18px;
 }
@@ -61,7 +62,7 @@
     display: none;
 }
 
-.add-button {
+.addButton {
     display: flex;
     animation: opacity-animation 400ms normal;
 }
@@ -74,18 +75,18 @@
     }
 }
 
-.image-cube span {
+.imageCube span {
     color: #fff;
     font-size: 17px;
     line-height: 18px;
     font-weight: 500;
 }
 
-.image-cube span:hover {
+.imageCube span:hover {
     text-decoration: underline;
 }
 
-.image-cube p{
+.imageCube p{
     font-size: 16px;
     line-height: 18px;
     color: #a2a2ad;
