--- a/Front/frontMusic/src/components/Cards/CardForYou/CardForYou.module.css
+++ b/Front/frontMusic/src/components/Cards/CardForYou/CardForYou.module.css
@@ -1,11 +1,11 @@
-.image-singer {
+.imageSinger {
     width: 264px;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
 
-.image-singer p {
+.imageSinger p {
     color: #fff;
     cursor: pointer;
     line-height: 18px;
@@ -14,20 +14,21 @@
     font-family: Open Sans;
 }
 
-.image-singer p:hover {
+.imageSinger p:hover {
     text-decoration: underline;
 }
 
-.image-singer .image {
+.imageSinger .image {
     width: 100%;
     height: 100%;
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
+    cursor: pointer;
 }
 
-.image-singer .image img {
+.imageSinger .image img {
     border-radius: 5px;
     pointer-events: none;
     transition: 400ms;
@@ -36,7 +37,7 @@
 }
 
 
-.logo-daily {
+.logoDaily {
     background: linear-gradient(180deg,rgba(0,0,0,0) 50%,rgba(0,0,0,.7));
     width: 100%;
     height: 100%;
@@ -49,7 +50,7 @@
     font-weight: bold;
 }
 
-.logo-daily .svg-icon {
+.logoDaily .svgIcon {
     padding-bottom: 10px;
     padding-left: 20px;
     display: flex;
@@ -58,7 +59,7 @@
     gap: 10px;
 }
 
-.play-button {
+.playButton {
     width: 100%;
     height: 100%;
     position: absolute;
@@ -67,7 +68,7 @@
     place-items: center;
 }
 
-.play-button button {
+.playButton button {
     border: none;
     height: 55px;
     width: 55px;
@@ -78,7 +79,7 @@
     align-items: center;
 }
 
-.play-button button svg {
+.playButton button svg {
     width: 25px;
     height: 25px;
 }
