--- a/Front/frontMusic/src/components/Cards/CardRadio/CardRadio.module.css
+++ b/Front/frontMusic/src/components/Cards/CardRadio/CardRadio.module.css
@@ -8,7 +8,7 @@
     position: relative;
 }
 
-.radio-image {
+.radioImage {
     width: 264px;
     height: 264px;
     background-color: #191922;
@@ -20,7 +20,7 @@
     cursor: pointer;
 }
 
-.radio-image img {
+.radioImage img {
     height: 212px;
     width: 212px;
     border-radius: 10px;
@@ -28,11 +28,11 @@
     position: absolute;
 }
 
-.radio-image img:hover {
+.radioImage img:hover {
     opacity: 0.6;
 }
 
-.play-button-radio{
+.playButton{
     position: absolute;
     z-index: 2;
     width: 50px;
@@ -43,7 +43,7 @@
     margin-left: 10px;
 }
 
-.play-button-radio button {
+.playButton button {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,7 +57,7 @@
     box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1),0 2px 4px -1px rgba(0, 0, 0, 0.06);
 }
 
-.play-button-radio button svg {
+.playButton button svg {
     width: 18px;
     height: 18px;
 }
