Troca de tela da side bar

--- a/Front/frontMusic/src/pages/HomePage/Index.css
+++ b/Front/frontMusic/src/pages/HomePage/Index.css
@@ -160,6 +160,10 @@ body {
 	margin-bottom: 10px;
 }
 
+.spans span:hover {
+	color: #EF5466;
+}
+
 /* Estilização para os inputs e buttons do header */
 
 header {
