tentando usar api

--- a/Front/frontMusic/src/pages/HomePage/Index.css
+++ b/Front/frontMusic/src/pages/HomePage/Index.css
@@ -233,3 +233,34 @@ header button {
 	width: 100%;
 	outline: none;
 }
+
+/* Distanciando as imagens da primeira section de music*/
+
+#img2 {
+	width: 160px;
+    z-index: 3;
+}
+
+#img0 {
+    z-index: 1;
+	width: 120px;
+    margin-right: 19rem;
+}
+
+#img1 {
+    z-index: 2;
+	width: 140px;
+    margin-right: 11rem;
+}
+
+#img3 {
+   z-index: 1;
+   width: 120px;
+   margin-left: 19rem;
+}
+
+#img4 {
+	width: 140px;
+    z-index: 2;
+    margin-left: 11rem;
+}
