--- a/Front/frontMusic/src/pages/Account/Account.module.css
+++ b/Front/frontMusic/src/pages/Account/Account.module.css
@@ -1,5 +1,5 @@
 * {
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif, Arial;
 }
 
 a:-webkit-any-link {
@@ -121,60 +121,16 @@ a:-webkit-any-link {
     justify-content: space-evenly;
 }
 
-.socialMediaAccount button {
-    border-radius: 30px;
-    background-color: #fff;
-    color: #191919;
-    border: none;
-    font-size: 15px;
-    font-weight: bolder;
-    box-shadow: 0 1px 20px 0 rgb(31 31 31/35%);
-    min-height: 42px;
-    width: 48%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    cursor: pointer;
-    margin-bottom: 35px;
-    transition: 400ms;
-}
-
 .threeLogos button {
     width: 30%;
     font-size: 12px;
-}
-
-.socialMediaAccount button:hover {
-    background-color: #e0e0e0;
 }
 
 .form {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: start;
     width: 100%;
-}
-
-.form input {
-    box-sizing: border-box;
-    padding: 15px;
-    width: 100%;
-    height: 54px;
-    border: none;
-    border-radius: 5px;
-    font-size: 14px;
-    font-weight: bolder;
-    outline: none;
-    margin-bottom: 25px;
-}
-
-.form label {
-    color: #ffffff;
-    font-size: 14px;
-    font-weight: 500;
-    margin-bottom: 5px;
-    overflow-wrap: break-word;
 }
 
 .form button {
