--- a/Front/frontMusic/src/pages/Content/Explorar/Explore.module.css
+++ b/Front/frontMusic/src/pages/Content/Explorar/Explore.module.css
@@ -1,15 +1,27 @@
 .infoContent {
-	width: 100%;
 	overflow-x: auto;
-	margin: 0;
 	height: calc(100vh - 56px - 80px);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.infoContent::-webkit-scrollbar-track {
+	background-color: #191922;
+	border-left: 1px solid #45454e;
+}
+
+.infoContent::-webkit-scrollbar {
+	width: 8px;
+}
+
+.infoContent::-webkit-scrollbar-thumb {
+	background: #686666;
+	border-radius: 20px;
+}
+
 .infoContent h1 {
-    width: 70vw;
+    width: 76vw;
     justify-content: start;
     color: #fff;
     font-weight: bolder;
