--- a/Front/frontMusic/src/pages/Content/Musica/Music.module.css
+++ b/Front/frontMusic/src/pages/Content/Musica/Music.module.css
@@ -1,15 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Ubuntu:wght@300&family=Work+Sans:wght@100&display=swap');
-
-/* Estilizando campo para adicionar artistas */
-
-.infoContent {
-	width: 100%;
+.infoContent { /* Estilizando campo para adicionar artistas */
 	overflow-x: auto;
-	margin: 0;
 	height: calc(100vh - 56px - 80px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .infoContent::-webkit-scrollbar-track {
@@ -27,16 +18,14 @@
 }
 
 .channel {
-    width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
     margin-bottom: 50px;
 }
 
 .artistAdd {
     width: 800px;
-    height: 280px;
+    height: 300px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -45,50 +34,19 @@
     font-size: 15px;
 }
 
-.artistAdd button{
-    height: 40px;
-    width: 200px;
-    background-color: #EF5466;
-    color: #fff;
-    font-size: 15px;
-    font-weight: bolder;
-    border: none;
-    border-radius: 40px;
-    transition: 400ms;
-    cursor: pointer;
-}
-
-.artistAdd button:hover {
-    background-color: #aa2938;
-}
-
 .artists {
-    background-color: aliceblue;
-    width: 500px;
     position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
-/* Estilizando section de quizzes */
-
-.quizzes {
+.quizzes { /* Estilizando section de quizzes */
     width: 77vw;
     display: flex;
     flex-direction: column;
-    justify-content: start;
-    align-items: center;
-}
-
-.quizzes h2 {
-    width: 100%;
     color: #fff;
     font-weight: 600;
 }
 
 .containerRectangle {
-    width: 100%;
     display: flex;
     justify-content: space-between;
 }
