--- a/Front/frontMusic/src/pages/Content/Podcasts/Podcasts.module.css
+++ b/Front/frontMusic/src/pages/Content/Podcasts/Podcasts.module.css
@@ -1,9 +1,18 @@
 .infoContent {
-	width: 100%;
 	overflow-x: auto;
-	margin: 0;
 	height: calc(100vh - 56px - 80px);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+}
+
+.infoContent::-webkit-scrollbar-track {
+	background-color: #191922;
+	border-left: 1px solid #45454e;
+}
+
+.infoContent::-webkit-scrollbar {
+	width: 8px;
+}
+
+.infoContent::-webkit-scrollbar-thumb {
+	background: #686666;
+	border-radius: 20px;
 }
