--- a/Front/frontMusic/src/pages/HomePage/Index.css
+++ b/Front/frontMusic/src/pages/HomePage/Index.css
@@ -7,36 +7,16 @@
 body {
 	margin: 0;
 	padding: 0;
-	width: 100vw;
-	height: 100vh;
 	overflow-x: hidden;
 }
 
 .App {
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
-}
-
-.content {
-	width: 100%;
-	background-color: #121216;
-}
-
-.bottom {
-	min-height: 80px;
-	width: 100%;
-	background-color: #23232d;
-	border-top: 1px solid #45454e;
-	position: absolute;
-	bottom: 0;
-	z-index: 5;
 }
 
 .top {
-	width: 100%;
 	height: calc(100vh - 80px);
-	background-color: #32323D;
 	display: flex;
 }
 
@@ -44,20 +24,12 @@ body {
 	width: 220px;
 	background-color: #191922;
 	border-right: 1px solid #45454e;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 }
 
-.left-menu .top-menu {
-	height: 300px;
-}
-
-.top-menu .logo-top {
-	height: 50px;
+.logo-top {
 	display: flex;
 	align-items: center;
-	margin: 0 24px;
+	margin: 14px 24px;
 	padding-bottom: 6px;
 }
 
@@ -68,27 +40,19 @@ body {
 /* Card de Assinar agora no sidebar */
 
 .subscribe {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	background-color: #2692b7;
 	background-image: linear-gradient(56deg, #0087c1 13%, #89d7bb);
-	box-shadow: 0 4px 20px rgb(0 0 0 / 10%);
 	border-radius: 10px;
 	margin: 36px 16px 12px;
 	padding: 16px 16px;
-
 	color: #fff;
 	font-size: 13px;
 	font-weight: lighter;
-	font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+	font-family: 'Open Sans",Helvetica,Arial,sans-serif';
 	line-height: 18px;
-	margin-bottom: 13px;
 }
 
 .subscribe button {
 	background: none;
-	font-size: 15px;
 	border: 1px solid #fff;
 	border-radius: 30px;
 	width: 150px;
@@ -104,89 +68,78 @@ body {
 
 /* Estilizando opções da siderbar */
 
-.left-menu figure {
-	width: 100%;
-	overflow-x: auto;
-	margin: 0;
+.left-menu section {
+	overflow-x: hidden;
 	height: calc(100vh - 80px - 300px);
 }
 
-.left-menu figure::-webkit-scrollbar-track {
-	background-color: #ffffff00;
+.left-menu section::-webkit-scrollbar-track {
+	background-color: transparent;
 }
 
-.left-menu figure::-webkit-scrollbar {
+.left-menu section::-webkit-scrollbar {
 	width: 6px;
 }
 
-.left-menu figure::-webkit-scrollbar-thumb {
+.left-menu section::-webkit-scrollbar-thumb {
 	background: #ffffff;
 	border-radius: 15px;
 }
 
-.options {
-	width: 100%;
-	height: auto;
-	display: flex;
-	flex-direction: column;
-	justify-content: start;
-	flex-flow: column nowrap;
-}
-
 .icon-options {
-	width: 81%;
 	height: 25%;
+	height: 230px;
 }
 
 .more-options {
 	width: 100%;
 	display: flex;
-	justify-content: end;
-}
-
-.spans {
-	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
-	align-items: flex-start;
-	width: 65%;
+	margin: 0px 80px;
+	gap: 10px;
 }
 
-.spans span {
+.more-options span {
 	font-size: 14px;
 	transition: 400ms;
 	color: #a2a2ad;
 	cursor: pointer;
-	margin-bottom: 10px;
 }
 
-.spans span:hover {
+.more-options span:hover {
 	color: #EF5466;
 }
 
-/* Estilização para os inputs e buttons do header */
+.content {
+	width: 100%;
+	background-color: #121216;
+}
 
 header {
-	width: 100%;
 	height: 56px;
 	border-bottom: 1px solid #45454e;
 	display: flex;
-	align-items: center;
-
 }
 
 header .text-box {
 	width: 50%;
-	height: 100%;
 	display: flex;
 	align-items: center;
-	margin-left: 20px;
+	margin: 0px 20px;
 }
 
 header .text-box .search {
 	width: 100%;
-	height: 60%;
 	display: flex;
+}
+
+.search input {
+	background: none;
+	border: none;
+	font-size: 1rem;
+	color: #fff;
+	width: 100%;
+	outline: none;
 }
 
 header .profile {
@@ -196,7 +149,7 @@ header .profile {
 }
 
 header .profile .icons-profile {
-	width: 150px;
+	width: 100px;
 	display: flex;
 	justify-content: space-evenly;
 }
@@ -208,8 +161,6 @@ header button {
 	transition: 400ms;
 	color: #fff;
 	border-radius: 150px;
-	display: grid;
-	place-items: center;
 }
 
 .search button,
@@ -225,42 +176,43 @@ header button {
 	background-color: #5f5f6d;
 }
 
-.search input {
-	background: none;
-	border: none;
-	font-size: 1rem;
-	color: #fff;
-	width: 100%;
-	outline: none;
-}
-
 /* Distanciando as imagens da primeira section de music*/
 
 #img2 {
-	width: 160px;
+	width: 150px;
     z-index: 3;
 }
 
 #img0 {
     z-index: 1;
-	width: 120px;
+	width: 110px;
     margin-right: 19rem;
 }
 
 #img1 {
     z-index: 2;
-	width: 140px;
+	width: 130px;
     margin-right: 11rem;
 }
 
 #img3 {
    z-index: 1;
-   width: 120px;
+   width: 110px;
    margin-left: 19rem;
 }
 
 #img4 {
-	width: 140px;
+	width: 130px;
     z-index: 2;
     margin-left: 11rem;
+}
+
+.bottom {
+	height: 80px;
+	width: 100%;
+	background-color: #23232d;
+	border-top: 1px solid #45454e;
+	position: absolute;
+	bottom: 0;
+	z-index: 5;
 }
