Correções + 4 rotas do favorites feitas

--- a/Front/frontMusic/src/pages/Content/Favoritos/Favorite.module.css
+++ b/Front/frontMusic/src/pages/Content/Favoritos/Favorite.module.css
@@ -4,11 +4,11 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 24px;
 }
 
-.topProfile {
-    width: 93%;
+.topProfile,
+.mainPlaylists {
+    width: 90%;
 }
 
 .profile {
