--- a/Front/frontMusic/src/components/Layout/Loading/Loading.module.css
+++ b/Front/frontMusic/src/components/Layout/Loading/Loading.module.css
@@ -1,8 +1,9 @@
 .loadingContainer {
 	width: 100%;
 	height: 100%;
-	display: grid;
-	place-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .loadingDot {
