--- a/Front/frontMusic/src/pages/Content/Favoritos/Favorite.module.css
+++ b/Front/frontMusic/src/pages/Content/Favoritos/Favorite.module.css
@@ -1,14 +1,29 @@
 .infoContent {
-	overflow-x: auto;
+	overflow-x: hidden;
 	height: calc(100vh - 56px - 80px);
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
+.infoContent::-webkit-scrollbar-track {
+	background-color: #191922;
+	border-left: 1px solid #45454e;
+}
+
+.infoContent::-webkit-scrollbar {
+	width: 8px;
+}
+
+.infoContent::-webkit-scrollbar-thumb {
+	background: #686666;
+	border-radius: 20px;
+}
+
 .topProfile,
 .mainPlaylists {
     width: 90%;
+    padding: 20px;
 }
 
 .profile {
