--- a/Front/frontMusic/src/components/Buttons/ButtonProfile/ButtonProfile.module.css
+++ b/Front/frontMusic/src/components/Buttons/ButtonProfile/ButtonProfile.module.css
@@ -19,3 +19,16 @@
     padding: 12px;
 }
 
+@keyframes arrow {
+    0% {
+        transform: translate3d(0, 0, 0);
+    } 50% {
+        transform: translate3d(5px, 0, 0);
+    } 100% {
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+.add {
+    animation: arrow 500ms normal;
+}
