--- a/Front/frontMusic/src/components/Buttons/Button/Button.module.css
+++ b/Front/frontMusic/src/components/Buttons/Button/Button.module.css
@@ -6,7 +6,6 @@
     height: 45px;
     font-size: 15px;
     border-radius: 30px;
-    border: none;
     font-weight: bold;
     box-shadow: 0 1px 20px 0 rgb(31 31 31/35%);
     cursor: pointer;
@@ -16,6 +15,7 @@
 }
 
 .pink {
+    border: none;
     width: 100%;
     background-color: #EF5466;
     color: #fff;
@@ -24,9 +24,16 @@
 }
 
 .gray {
+    border: none;
     width: 180px;
     background-color: #fff;
     color: #191919;
+}
+
+.black {
+    border: 1px solid #52525D;
+    background: none;
+    color: #fff;
 }
 
 .button .gray:hover {
@@ -35,4 +42,9 @@
 
 .button .pink:hover {
     background-color: #DB343D;
+}
+
+.black:hover {
+    border-color: #fff;
+    background-color: #ffffff36;
 }
