--- a/Front/frontMusic/src/pages/Content/Artist/Artist.module.css
+++ b/Front/frontMusic/src/pages/Content/Artist/Artist.module.css
@@ -1,3 +1,94 @@
 .container {
-    background-color: #121222;
+    height: calc(100vh - 56px - 80px);
+    overflow-x: auto;
+}
+
+.container::-webkit-scrollbar-track {
+	background-color: #191922;
+	border-left: 1px solid #45454e;
+}
+
+.container::-webkit-scrollbar {
+	width: 8px;
+}
+
+.container::-webkit-scrollbar-thumb {
+	background: #686666;
+	border-radius: 20px;
+}
+
+.topContent {
+    display: flex;
+    justify-content: space-between;
+    padding: 2rem 6rem;
+}
+
+.profile {
+    display: flex;
+    gap: 2rem;
+}
+
+.profile img {
+    border-radius: 200px;
+    width: 234px;
+    height: 234px;
+}
+
+.infoArtist {
+    width: 380px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: #fff;
+}
+
+.infoArtist h1 {
+    font-size: 32px;
+    font-weight: 700;
+    margin: 0;
+}
+
+.infoArtist h2 {
+    font-size: 14px;
+    font-weight: 500;
+
+}
+.infoArtist p {
+    color: #A2A2AD;
+    font-size: 12px;
+    margin: 0;
+}
+
+.infoArtist .buttons {
+    margin-top: 1rem;
+    display: flex;
+    align-items: start;
+    gap: 1rem;
+}
+
+.infoArtist .buttons .button {
+    margin-top: .25rem;
+    height: 40px;
+    width: 40px;
+    background: none;
+    border-radius: 100px;
+    border: 1px solid #52525D;
+    color: #fff;
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+    transition: 400ms;
+}
+
+.infoArtist .buttons .button:hover {
+    border-color: #EF5466;
+    color: #EF5466;
+}
+
+.medias svg {
+    padding: 0 1rem;
+}
+
+.medias svg:nth-of-type(2) {
+    border-left: 1px solid rgba(194,194,202,.6);;
 }
