--- a/Front/frontMusic/src/pages/Content/Artist/Artist.module.css
+++ b/Front/frontMusic/src/pages/Content/Artist/Artist.module.css
@@ -20,6 +20,7 @@
 .topContent {
     display: flex;
     justify-content: space-between;
+    align-items: center;
     padding: 2rem 6rem;
 }
 
@@ -91,4 +92,64 @@
 
 .medias svg:nth-of-type(2) {
     border-left: 1px solid rgba(194,194,202,.6);;
+}
+
+.topContent h1 {
+    display: flex;
+    align-items: center;
+    color: #fff;
+}
+
+.topContent h1 svg {
+    margin-top: 5px;
+}
+
+.content {
+    width: 75%;
+}
+
+.content ul,
+.latestTrack {
+    background-color: #23232d;
+    list-style: none;
+    padding: 2rem ;
+}
+
+.topContent aside {
+    width: 25%;
+    margin-left: 2rem;
+}
+
+.topContent aside ul {
+    list-style: none;
+}
+
+
+.latestTrack {
+    display: flex;
+    gap: 2rem;
+}
+
+.cardMusic img {
+    border-radius: 5px;
+}
+
+.cardMusic p {
+    color: #a2a2ad;
+    font-size: 10px;
+}
+
+.infoMusic {
+    width: 100%;
+}
+
+.infoMusic h1 {
+    margin: 0;
+}
+
+#data {
+    color: #a2a2ad;  
+    margin-block-start: 0em;
+    margin-block-end: 0em;  
+    margin-bottom: 1rem;
 }
