Troca de telas na pagina de perfil do artista

--- a/Front/frontMusic/src/components/Buttons/Button/Button.module.css
+++ b/Front/frontMusic/src/components/Buttons/Button/Button.module.css
@@ -31,6 +31,8 @@
 }
 
 .black {
+    padding-inline-start: 20px;
+    padding-inline-end: 20px;
     border: 1px solid #52525D;
     background: none;
     color: #fff;
