Finalizando estilização em Favorite

--- a/Front/frontMusic/src/components/Nav/Search/Search.module.css
+++ b/Front/frontMusic/src/components/Nav/Search/Search.module.css
@@ -1,5 +1,6 @@
 .search {
     width: 600px;
+    height: 40px;
     background-color: #23232D;
     color: #D1D1D6;
     border: 1px solid #52525D;
