Criando primeira API

--- a/Front/frontMusic/src/pages/Content/Artist/Artist.module.css
+++ b/Front/frontMusic/src/pages/Content/Artist/Artist.module.css
@@ -88,6 +88,12 @@
 
 .medias svg {
     padding: 0 1rem;
+    cursor: pointer;
+    transition: 400ms;
+}
+
+.medias svg:hover {
+    fill: #FFF;
 }
 
 .medias svg:nth-of-type(2) {
