--- a/Front/frontMusic/src/pages/Content/Artist/NavBar/Discography/Discography.module.css
+++ b/Front/frontMusic/src/pages/Content/Artist/NavBar/Discography/Discography.module.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 2rem 6rem;
+    padding: .5rem 6rem;
 }
 
 .topContent h1 {
