--- a/Front/frontMusic/src/components/Form/Input/Input.module.css
+++ b/Front/frontMusic/src/components/Form/Input/Input.module.css
@@ -1,3 +1,8 @@
+.formInput {
+    display: flex;
+    flex-direction: column;
+}
+
 .formInput input {
     width: 100%;
     height: 54px;
@@ -16,4 +21,9 @@
     font-size: 14px;
     font-weight: 500;
     overflow-wrap: break-word;
+}
+
+.formInput input[type="checkbox"] {
+    height: 30px;
+    width: 30px;
 }
